Nytt forsøk på å lage en meldingskatalog
